final deliverable version