@@ -95,6 +95,8 @@ public final class DecisionPeriodIndicatorPluginTest {
         assertEquals(plugin.evaluate(null).getStatus(), IndicatorStatus.INSUFFICIENT_DATA);
         assertEquals(plugin.evaluate(nullTender).getStatus(), IndicatorStatus.INSUFFICIENT_DATA);
         assertEquals(plugin.evaluate(tender1).getStatus(), IndicatorStatus.INSUFFICIENT_DATA);
+        assertEquals(plugin.evaluate(tender7).getStatus(), IndicatorStatus.INSUFFICIENT_DATA);
+        assertEquals(plugin.evaluate(tender8).getStatus(), IndicatorStatus.INSUFFICIENT_DATA);
     }
 
     /**
@@ -103,24 +105,18 @@ public final class DecisionPeriodIndicatorPluginTest {
     @Test
     public void calculatedIndicatorTest() {
         assertEquals(plugin.evaluate(tender2).getStatus(), IndicatorStatus.CALCULATED);
-        assertEquals(plugin.evaluate(tender2).getValue(), new Double(100d));
+        assertEquals(plugin.evaluate(tender2).getValue(), Double.valueOf(100d));
 
         assertEquals(plugin.evaluate(tender3).getStatus(), IndicatorStatus.CALCULATED);
-        assertEquals(plugin.evaluate(tender3).getValue(), new Double(100d));
+        assertEquals(plugin.evaluate(tender3).getValue(), Double.valueOf(100d));
 
         assertEquals(plugin.evaluate(tender4).getStatus(), IndicatorStatus.CALCULATED);
-        assertEquals(plugin.evaluate(tender4).getValue(), new Double(0d));
+        assertEquals(plugin.evaluate(tender4).getValue(), Double.valueOf(0d));
 
         assertEquals(plugin.evaluate(tender6).getStatus(), IndicatorStatus.CALCULATED);
-        assertEquals(plugin.evaluate(tender6).getValue(), new Double(0d));
-
-        assertEquals(plugin.evaluate(tender7).getStatus(), IndicatorStatus.CALCULATED);
-        assertEquals(plugin.evaluate(tender7).getValue(), new Double(0d));
-
-        assertEquals(plugin.evaluate(tender8).getStatus(), IndicatorStatus.CALCULATED);
-        assertEquals(plugin.evaluate(tender8).getValue(), new Double(100d));
+        assertEquals(plugin.evaluate(tender6).getValue(), Double.valueOf(0d));
 
         assertEquals(plugin.evaluate(tender9).getStatus(), IndicatorStatus.CALCULATED);
-        assertEquals(plugin.evaluate(tender9).getValue(), new Double(0d));
+        assertEquals(plugin.evaluate(tender9).getValue(), Double.valueOf(0d));
     }
 }
